@@ -1,0 +1,54 @@
+#! /usr/bin/env bash
+## -*- sh -*-
+## @configure_input@
+
+## These variables need to exist
+## Note no use of $DESTDIR... we ignore it so that destdir can be used
+## for temp installs later copied to /
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+datarootdir=@datarootdir@
+
+if [[ $# -eq 0 || -n $( echo $* | egrep -- "--help|-h" ) ]]; then
+    echo "lhapdf-config: configuration tool for the LHAPDF"
+    echo "               parton density function evolution library"
+    echo "               http://projects.hepforge.org/lhapdf/"
+    echo
+    echo "Usage: lhapdf-config [options]"
+    echo "Options:"
+    echo "  --help | -h    : show this help message"
+    echo "  --prefix       : show the installation prefix (cf. autoconf)"
+    echo "  --incdir       : show the path to the LHAPDF C++ header directory"
+    echo "  --libdir       : show the path to the LHAPDF library directory"
+    echo "  --datadir      : show the path to the LHAPDF data directory"
+    echo
+    echo "  --cppflags     : get compiler flags for use with the C preprocessor stage of C++ compilation"
+    echo "  --ldflags      : get compiler flags for use with the linker stage of any compilation"
+    echo
+    echo "  --version      : returns LHAPDF release version number"
+fi
+
+OUT=""
+
+tmp=$( echo "$*" | egrep -- '--\<prefix\>')
+test -n "$tmp" && OUT="$OUT @prefix@"
+
+tmp=$( echo "$*" | egrep -- '--\<incdir\>')
+test -n "$tmp" && OUT="$OUT @includedir@"
+
+tmp=$( echo "$*" | egrep -- '--\<cppflags\>')
+test -n "$tmp" && OUT="$OUT -I@includedir@ @BOOST_CPPFLAGS@ @YAMLCPP_CPPFLAGS@"
+
+tmp=$( echo "$*" | egrep -- '--\<libdir\>')
+test -n "$tmp" && OUT="$OUT @libdir@"
+
+tmp=$( echo "$*" | egrep -- '--\<ldflags\>')
+test -n "$tmp" && OUT="$OUT -L@libdir@ @BOOST_LDFLAGS@ @YAMLCPP_LDFLAGS@ -lLHAPDF @BOOST_LIBS@ @YAMLCPP_LIBS@"
+
+tmp=$( echo "$*" | egrep -- '--\<datadir\>|--\<datarootdir\>')
+test -n "$tmp" && OUT="$OUT @datadir@/@PACKAGE_TARNAME@"
+
+tmp=$( echo "$*" | egrep -- '--\<version\>')
+test -n "$tmp" && OUT="$OUT @PACKAGE_VERSION@"
+
+echo $OUT
